Fix checklist image paths and left-align text in speech bubbles

--- a/redesign/style.css
+++ b/redesign/style.css
@@ -781,6 +781,7 @@ h6 {
     line-height: 1.5;
     position: relative;
     padding-left: 32px; /* SVGアイコン分の余白 */
+    text-align: left;
 }
 
 .speech-bubble li::before {
