--- a/style.css
+++ b/style.css
@@ -702,6 +702,7 @@ h6 {
     line-height: 1.5;
     position: relative;
     padding-left: 32px; /* SVGアイコン分の余白 */
+    text-align: left;
 }
 
 .speech-bubble li::before {
@@ -711,7 +712,7 @@ h6 {
     top: 2px;
     width: 22px;
     height: 22px;
-    background-image: url('../images/checklist_icon.svg');
+    background-image: url('./images/checklist_icon.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
